Fix tag database tests

--- a/uncrustify.cfg
+++ b/uncrustify.cfg
@@ -11,6 +11,10 @@ indent_class = 1
 indent_access_spec = 1
 indent_access_spec_body = true
 
+# Force a line break at the end of files
+nl_end_of_file = force
+nl_end_of_file_min = 1
+
 # Stick pointer and reference symbol to variable
 align_var_def_star_style = 1
 align_var_def_amp_style = 1
