--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,7 @@ releases/release.sh
 releases/translation_tools.rar
 CrashReporter/debug/
 CrashReporter/release/
+gui/android/AndroidManifest.xml
 
 
 # NPM
