Fix version showing as 'VERSION' in AppVeyor builds (fix #1609)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,7 +28,7 @@ project(Grabber)
 if((NOT DEFINED VERSION) OR ((DEFINED NIGHTLY) AND (NIGHTLY MATCHES "1")))
 	set(VERSION "7.0.0")
 else()
-	string(REGEX REPLACE "^v" "" VERSION VERSION)
+	string(REGEX REPLACE "^v" "" VERSION "${VERSION}")
 endif()
 set(USE_SSL 1)
 
