Make Grabber platform-aware (issue #1608)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,13 @@ if((NOT DEFINED VERSION) OR ((DEFINED NIGHTLY) AND (NIGHTLY MATCHES "1")))
 else()
 	string(REGEX REPLACE "^v" "" VERSION "${VERSION}")
 endif()
+if(NOT DEFINED VERSION_PLATFORM)
+	if(CMAKE_SYSTEM_PROCESSOR MATCHES "[aA][mM][dD]64")
+		set(VERSION_PLATFORM "x64")
+	else()
+		set(VERSION_PLATFORM "x86")
+	endif()
+endif()
 set(USE_SSL 1)
 
 # Android settings
@@ -39,8 +46,10 @@ set(ANDROID_APP_VERSION_CODE 1)
 set(ANDROID_APP_PACKAGE_NAME "com.bionus.grabber")
 
 message(STATUS "Configuring for version '${VERSION}'")
+message(STATUS "Configuring for platform '${VERSION_PLATFORM}' (${CMAKE_SYSTEM_PROCESSOR})")
 
 add_definitions(-DVERSION="${VERSION}")
+add_definitions(-DVERSION_PLATFORM="${VERSION_PLATFORM}")
 add_definitions(-DPROJECT_WEBSITE_URL="https://bionus.github.io/imgbrd-grabber")
 add_definitions(-DPROJECT_GITHUB_URL="https://github.com/Bionus/imgbrd-grabber")
 add_definitions(-DSOURCE_ISSUES_URL="https://raw.githubusercontent.com/wiki/Bionus/imgbrd-grabber/SourceIssues.md")
