Add ExHentai to default sources

--- a/release/sites/E-Hentai/exhentai.org/defaults.ini
+++ b/release/sites/E-Hentai/exhentai.org/defaults.ini
@@ -1,5 +1,5 @@
 [General]
-name=E-Hentai
+name=ExHentai
 ssl=true
 
 [sources]
@@ -11,4 +11,3 @@ source_4=
 
 [login]
 type=post
-post\url="https://forums.e-hentai.org/index.php?act=Login&CODE=01"
