--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 e2e/viewer/result.json
 release/sites/helper.js
 release/sites/*/model.js
+release/sites/*/*/cookies.txt
 release/sites/*/*/settings.ini
 release/sites/*/*/tags.txt
 release/sites/*/*/tags.db
