Add brazenvoid to the list of contributors for issues

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -111,6 +111,15 @@
       "contributions": [
         "bug"
       ]
+    },
+    {
+      "login": "brazenvoid",
+      "name": "Umair Ahmed",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/8722533?s=122",
+      "profile": "https://github.com/brazenvoid",
+      "contributions": [
+        "bug"
+      ]
     }
   ]
 }
