--- a/release/sites/Sankaku/chan.sankakucomplex.com/defaults.ini
+++ b/release/sites/Sankaku/chan.sankakucomplex.com/defaults.ini
@@ -6,6 +6,12 @@ name=chan.sankakucomplex.com
 ssl=true
 headers="@Variant(\0\0\0\b\0\0\0\x1\0\0\0\x14\0U\0s\0\x65\0r\0-\0\x41\0g\0\x65\0n\0t\0\0\0\n\0\0\0\xe4\0M\0o\0z\0i\0l\0l\0\x61\0/\0\x35\0.\0\x30\0 \0(\0W\0i\0n\0\x64\0o\0w\0s\0 \0N\0T\0 \0\x31\0\x30\0.\0\x30\0;\0 \0W\0i\0n\0\x36\0\x34\0;\0 \0x\0\x36\0\x34\0)\0 \0\x41\0p\0p\0l\0\x65\0W\0\x65\0\x62\0K\0i\0t\0/\0\x35\0\x33\0\x37\0.\0\x33\0\x36\0 \0(\0K\0H\0T\0M\0L\0,\0 \0l\0i\0k\0\x65\0 \0G\0\x65\0\x63\0k\0o\0)\0 \0\x43\0h\0r\0o\0m\0\x65\0/\0\x36\0\x37\0.\0\x30\0.\0\x33\0\x33\0\x39\0\x36\0.\0\x38\0\x37\0 \0S\0\x61\0\x66\0\x61\0r\0i\0/\0\x35\0\x33\0\x37\0.\0\x33\0\x36)"
 
+[download]
+throttle_details=1
+throttle_image=1
+throttle_page=1
+throttle_retry=120
+
 [sources]
 usedefault=false
 source_1=regex
