--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,5 @@
 files:
   - source: /languages/YourLanguage.ts
     translation: /languages/%language%.ts
+  - source: /CrashReporter/languages/YourLanguage.ts
+    translation: /CrashReporter/languages/%language%.ts
