Use paypal.me link for PayPal donations

--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,2 +1,2 @@
 patreon: bionus
-custom: https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=bio%2enus%40hotmail%2efr&lc=EN&item_name=Bionus&item_number=Grabber&currency_code=EUR
+custom: https://www.paypal.me/jvasti
