--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,17 +1,18 @@
 version: '{build}'
+image: Visual Studio 2017
 
 environment:
   APPVEYOR: 1
   DEPLOY: 0
   BREAKPAD: 0
   MYSQL_VERSION: mysql-5.7.14-win32
-  APNG_PLUGIN: apng-1.1.05.10.1
+  APNG_PLUGIN: apng-1.1.1-35.12.3
   QSCINTILLA_VERSION: QScintilla_gpl-2.10.8
 
   matrix:
     # MSVC x86
     - PLATFORM: amd64_x86
-      QTDIR: C:\Qt\5.10.1\msvc2015
+      QTDIR: C:\Qt\5.12.3\msvc2017
       OPENSSLDIR: C:\OpenSSL-Win32
       MAKE: nmake
       MAKEFILES: NMake Makefiles
@@ -19,7 +20,7 @@ environment:
 
     # MSVC x64
     - PLATFORM: amd64
-      QTDIR: C:\Qt\5.10.1\msvc2015_64
+      QTDIR: C:\Qt\5.12.3\msvc2017_64
       OPENSSLDIR: C:\OpenSSL-Win64
       MAKE: nmake
       MAKEFILES: NMake Makefiles
@@ -27,7 +28,7 @@ environment:
 
     # MinGW
     - PLATFORM: mingw
-      QTDIR: C:\Qt\5.10.1\mingw53_32
+      QTDIR: C:\Qt\5.12.3\mingw73_32
       OPENSSLDIR: C:\OpenSSL-Win32
       MAKE: mingw32-make
       MAKEFILES: MinGW Makefiles
@@ -35,7 +36,7 @@ environment:
 cache:
   - release\sites\node_modules -> release\sites\package.json
   - mysql-5.7.14-win32 -> .appveyor.yml
-  - apng-1.1.05.10.1 -> .appveyor.yml
+  - apng-1.1.1-35.12.3 -> .appveyor.yml
   - QScintilla_gpl-2.10.8 -> .appveyor.yml
   - depot_tools -> .appveyor.yml
   - breakpad -> .appveyor.yml
@@ -43,9 +44,9 @@ cache:
 init:
   - git config --global core.autocrlf input
   - if %PLATFORM%==mingw set PATH=%PATH:C:\Program Files\Git\usr\bin;=%
-  - if %PLATFORM%==mingw set PATH=C:\Qt\Tools\mingw492_32\bin;%PATH%
+  - if %PLATFORM%==mingw set PATH=C:\Qt\Tools\mingw530_32\bin;%PATH%
   - set PATH=%QTDIR%\bin;%PATH%
-  - if not %PLATFORM%==mingw call "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\vcvarsall.bat" %PLATFORM%
+  - if not %PLATFORM%==mingw call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvarsall.bat" %PLATFORM%
   - set PATH=%PATH%;"C:\\Program Files (x86)\\Inno Setup 5"
   - if "%APPVEYOR_REPO_TAG%"=="true" (set "GRABBER_IS_NIGHTLY=0") else (set "GRABBER_IS_NIGHTLY=1")
   - if "%APPVEYOR_REPO_TAG%"=="true" (set "GRABBER_VERSION=%APPVEYOR_REPO_TAG_NAME%") else (set "GRABBER_VERSION=nightly")
@@ -97,7 +98,7 @@ build_script:
   - cd ..
 
   # Download APNG plugin DLL
-  - if %DEPLOY%==1 if not exist %APNG_PLUGIN% curl -L https://install.skycoder42.de/qtmodules/windows_x86/qt5101/qt.qt5.5101.skycoder42.png.win32_msvc2015/1.1.05.10.1.7z -o "%APNG_PLUGIN%.7z"
+  - if %DEPLOY%==1 if not exist %APNG_PLUGIN% curl -L https://install.skycoder42.de/qtmodules/windows_x86/qt5123/qt.qt5.5123.skycoder42.apng.win32_msvc2017/1.1.1-35.12.3.7z -o "%APNG_PLUGIN%.7z"
   - if %DEPLOY%==1 if not exist %APNG_PLUGIN% 7z x "%APNG_PLUGIN%.7z" -y -o"%APNG_PLUGIN%"
 
   # Download Mysql DLL
@@ -105,7 +106,7 @@ build_script:
   - if %DEPLOY%==1 if not exist %MYSQL_VERSION% 7z x "%MYSQL_VERSION%.zip" -y
 
   # Generate installer
-  - if %DEPLOY%==1 iscc /Q /DMyAppVersion="%GRABBER_VERSION%" /DPlatformName="%PLATFORM_NAME%" /DQtDir="%QTDIR%\bin" /DOpenSSLDir="%OPENSSLDIR%" /DMySQLDir="%APPVEYOR_BUILD_FOLDER%\%MYSQL_VERSION%" /DQtApngDll="%APPVEYOR_BUILD_FOLDER%\%APNG_PLUGIN%\5.10.1\msvc2015\plugins\imageformats\qapng.dll" releases/setup.iss
+  - if %DEPLOY%==1 iscc /Q /DMyAppVersion="%GRABBER_VERSION%" /DPlatformName="%PLATFORM_NAME%" /DQtDir="%QTDIR%\bin" /DOpenSSLDir="%OPENSSLDIR%" /DMySQLDir="%APPVEYOR_BUILD_FOLDER%\%MYSQL_VERSION%" /DQtApngDll="%APPVEYOR_BUILD_FOLDER%\%APNG_PLUGIN%\5.12.3\msvc2017\plugins\imageformats\qapng.dll" releases/setup.iss
 
   # Package symbol files to zip
   - if %DEPLOY%==1 if "%BUILD_TYPE%"=="RelWithDebInfo" 7z a "releases\Grabber_%GRABBER_VERSION%_%PLATFORM_NAME%_symbols.zip" ".\build\gui\Grabber.pdb" ".\build\cli\Grabber-cli.pdb"
