Add default API keys for Twitter (issue #1785)
From:
https://gist.github.com/shobotch/5160017

--- a/release/sites/Twitter/api.twitter.com/defaults.ini
+++ b/release/sites/Twitter/api.twitter.com/defaults.ini
@@ -1,3 +1,10 @@
 [General]
 name=Twitter
 ssl=true
+
+[login]
+type=oauth2
+
+[auth]
+consumerKey=3nVuSoBZnx6U4vzUxf5w
+consumerSecret=Bcs59EFbbsdF6Sl9Ng71smgStWEGwXXKSjYvPVt7qys
