--- a/gui/CMakeLists.txt
+++ b/gui/CMakeLists.txt
@@ -13,9 +13,18 @@ if(DEFINED ENV{TRAVIS})
 endif()
 
 # Disable Google Breakpad if the provided folder does not exist
-if((DEFINED BREAKPAD) AND (NOT EXISTS "${BREAKPAD}"))
-	message(WARNING "Provided Google Breakpad directory does not exist, disabling Google Breakpad: ${BREAKPAD}")
-	set(USE_BREAKPAD 0)
+if(USE_BREAKPAD)
+	if(NOT DEFINED BREAKPAD)
+		if(WIN32)
+			set(BREAKPAD "D:/bin/google-breakpad")
+		elseif(UNIX)
+			set(BREAKPAD "~/Programmation/google-breakpad")
+		endif()
+	endif()
+	if((NOT DEFINED BREAKPAD) OR (NOT EXISTS "${BREAKPAD}"))
+		message(WARNING "Provided Google Breakpad directory does not exist, disabling Google Breakpad: ${BREAKPAD}")
+		set(USE_BREAKPAD 0)
+	endif()
 endif()
 
 # Nightly version settings
@@ -90,9 +99,6 @@ if(USE_BREAKPAD)
 	if(WIN32)
 		set(CMAKE_LFLAGS_RELEASE "${CMAKE_LFLAGS_RELEASE} /INCREMENTAL:NO /DEBUG")
 		set(CMAKE_CFLAGS_RELEASE "${CMAKE_CFLAGS_RELEASE} -O2 -MD -zi")
-		if(NOT DEFINED BREAKPAD)
-			set(BREAKPAD "D:/bin/google-breakpad")
-		endif()
 		if(CMAKE_BUILD_TYPE STREQUAL "Release")
 			list(APPEND LIBS
 				"${BREAKPAD}/src/client/windows/Release/lib/common.lib"
@@ -106,9 +112,6 @@ if(USE_BREAKPAD)
 		endif()
 	elseif(UNIX)
 		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fpermissive")
-		if(NOT DEFINED BREAKPAD)
-			set(BREAKPAD "~/Programmation/google-breakpad")
-		endif()
 		list(APPEND LIBS "${BREAKPAD}/src/client/linux/libbreakpad_client.a")
 	endif()
 	message(STATUS "Using Google Breakpad from ${BREAKPAD}")
