--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,7 +40,7 @@ jobs:
       uses: jurplel/install-qt-action@v1.0.0
       with:
         version: 5.12.3
-        dir: ${{ env.GITHUB_WORKSPACE }}\vendor_qt\Qt
+        dir: vendor_qt\Qt
 
     - name: Install QScintilla
       working-directory: vendor_qt
@@ -96,10 +96,11 @@ jobs:
     - name: Compile
       working-directory: build
       shell: cmd
-      run: cmake --build . --config Release -j 4
+      run: |
+        cmake --build . --config Release --target sites
+        cmake --build . --config Release
 
     - name: Test
-      working-directory: ${{ env.GITHUB_WORKSPACE }}
       shell: cmd
       run: build\tests\Release\tests.exe
       env:
