--- a/cli/CMakeLists.txt
+++ b/cli/CMakeLists.txt
@@ -11,5 +11,5 @@ include_directories("src/" "../lib/src/" "..")
 
 add_executable(${PROJECT_NAME} ${SOURCES})
 target_link_libraries(${PROJECT_NAME} ${QT_LIBRARIES} lib)
-set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME "Grabber-cli")
+set_target_properties(${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/cli/$<0:>" OUTPUT_NAME "Grabber-cli")
 install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION bin)
