--- a/gui/CMakeLists.txt
+++ b/gui/CMakeLists.txt
@@ -144,7 +144,7 @@ if(ANDROID)
 	include("qt-android-cmake/AddQtAndroidApk")
 	add_qt_android_apk("${PROJECT_NAME}_apk" ${PROJECT_NAME} BUILDTOOLS_REVISION "28.0.3" DEPENDS ${APK_LIBS} PACKAGE_SOURCES ${ANDROID_PACKAGE_SOURCES})
 else()
-	set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME "Grabber")
+	set_target_properties(${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/gui/$<0:>" OUTPUT_NAME "Grabber")
 	install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION bin)
 endif()
 
