--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,6 +47,7 @@ jobs:
       run: |
         curl -Lo "%QSCINTILLA_VERSION%.zip" "https://sourceforge.net/projects/pyqt/files/QScintilla2/QScintilla-2.10.8/%QSCINTILLA_VERSION%.zip"
         7z x "%QSCINTILLA_VERSION%.zip" -y
+        rm "%QSCINTILLA_VERSION%.zip"
         cd "%QSCINTILLA_VERSION%\Qt4Qt5"
         call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" x64
         qmake qscintilla.pro
@@ -63,6 +64,7 @@ jobs:
         set OPENSSL_ROOT_DIR=%GITHUB_WORKSPACE%\vendor\OpenSSL
         echo ::set-env name=OPENSSL_ROOT_DIR::%OPENSSL_ROOT_DIR%
         OpenSSL.exe /VERYSILENT /SUPPRESSMSGBOXES /NORESTART /SP- /DIR="%OPENSSL_ROOT_DIR%"
+        rm OpenSSL.exe
 
     - name: Download MySQL
       if: steps.vendor-cache.outputs.cache-hit != 'true'
@@ -71,6 +73,7 @@ jobs:
       run: |
         curl -Lo "%MYSQL_VERSION%.zip" "https://dev.mysql.com/get/Downloads/MySQL-5.7/%MYSQL_VERSION%.zip"
         7z x "%MYSQL_VERSION%.zip" -y
+        rm "%MYSQL_VERSION%.zip"
         echo ::set-env name=MYSQL_INSTALL_DIR::%GITHUB_WORKSPACE%\vendor\%MYSQL_VERSION%
 
     - name: Download APNG plugin
@@ -80,6 +83,7 @@ jobs:
       run: |
         curl -Lo APNG.7z https://install.skycoder42.de/qtmodules/windows_x86/qt5125/qt.qt5.5125.skycoder42.apng.win32_msvc2017/1.1.2-55.12.5.7z
         7z x APNG.7z -y -oAPNG
+        rm APNG.7z
         echo ::set-env name=APNG_PLUGIN_DLL::%GITHUB_WORKSPACE%\vendor\APNG\5.12.5\msvc2017\plugins\imageformats\qapng.dll
 
     - name: Create build dir
