Add link to the telemetry documentation page in the docs

--- a/_data/docs_navigation.yml
+++ b/_data/docs_navigation.yml
@@ -30,3 +30,4 @@
     - link: /docs/compilation.html
     - link: /docs/cli.html
     - link: /docs/portable-version.html
+    - link: /docs/telemetry.html
