--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -50,7 +50,7 @@ init:
   - set PATH=%PATH%;"C:\\Program Files (x86)\\Inno Setup 5"
   - if "%APPVEYOR_REPO_TAG%"=="true" (set "GRABBER_IS_NIGHTLY=0") else (set "GRABBER_IS_NIGHTLY=1")
   - if "%APPVEYOR_REPO_TAG%"=="true" (set "GRABBER_VERSION=%APPVEYOR_REPO_TAG_NAME%") else (set "GRABBER_VERSION=nightly")
-  - if "%PLATFORM%"=="X86" (set "PLATFORM_NAME=x86") else (set "PLATFORM_NAME=x64")
+  - if "%PLATFORM%"=="x86" (set "PLATFORM_NAME=x86") else (set "PLATFORM_NAME=x64")
 
 install:
   - git submodule update --init --recursive
@@ -73,7 +73,7 @@ build_script:
   - if %BREAKPAD_BUILD%==1 sed -i -e "s/<\/RuntimeLibrary>/DLL<\/RuntimeLibrary>/g;" *.vcxproj # <TreatWChar_tAsBuiltInType>false<\/TreatWChar_tAsBuiltInType>
   - if %BREAKPAD_BUILD%==1 sed -i -e "s/<\/RuntimeLibrary>/DLL<\/RuntimeLibrary>/g;" */*.vcxproj
   - if %BREAKPAD_BUILD%==1 sed -i -e "s/<\/RuntimeLibrary>/DLL<\/RuntimeLibrary>/g;" */*/*.vcxproj
-  - if %BREAKPAD_BUILD%==1 if "%PLATFORM%"=="X86" (set "BREAKPAD_PLATFORM=Win32") else (set "BREAKPAD_PLATFORM=x64")
+  - if %BREAKPAD_BUILD%==1 if "%PLATFORM%"=="x86" (set "BREAKPAD_PLATFORM=Win32") else (set "BREAKPAD_PLATFORM=x64")
   - if %BREAKPAD_BUILD%==1 msbuild breakpad_client.sln /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll" /m /verbosity:normal /p:Configuration=Release /p:Platform="%BREAKPAD_PLATFORM%"
   - if %BREAKPAD_BUILD%==1 cd "%APPVEYOR_BUILD_FOLDER%"
 
