--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,6 +60,7 @@ if(USE_SSL AND (NOT ANDROID))
 	message(STATUS "Compiling with SSL support")
 	find_package(OpenSSL REQUIRED)
 	if (OPENSSL_FOUND)
+		message(STATUS "OpenSSL version: ${OPENSSL_VERSION}")
 		message(STATUS "OpenSSL include dir: ${OPENSSL_INCLUDE_DIR}")
 		message(STATUS "OpenSSL libraries: ${OPENSSL_LIBRARIES}")
 		include_directories(${OPENSSL_INCLUDE_DIR})
