Fix env not set when using cache in Github actions

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,9 @@ jobs:
         echo ::set-env name=GRABBER_VERSION::nightly
         echo ::set-env name=GRABBER_IS_NIGHTLY::1
         echo ::set-env name=PLATFORM_NAME::x64
+        echo ::set-env name=OPENSSL_ROOT_DIR::%GITHUB_WORKSPACE%\vendor\OpenSSL
+        echo ::set-env name=MYSQL_INSTALL_DIR::%GITHUB_WORKSPACE%\vendor\%MYSQL_VERSION%
+        echo ::set-env name=APNG_PLUGIN_DLL::%GITHUB_WORKSPACE%\vendor\APNG\5.12.5\msvc2017\plugins\imageformats\qapng.dll
 
     - name: Vendor cache
       uses: actions/cache@v1
@@ -61,8 +64,6 @@ jobs:
       shell: cmd
       run: |
         curl -Lo OpenSSL.exe https://slproweb.com/download/Win64OpenSSL-1_1_1d.exe
-        set OPENSSL_ROOT_DIR=%GITHUB_WORKSPACE%\vendor\OpenSSL
-        echo ::set-env name=OPENSSL_ROOT_DIR::%OPENSSL_ROOT_DIR%
         OpenSSL.exe /VERYSILENT /SUPPRESSMSGBOXES /NORESTART /SP- /DIR="%OPENSSL_ROOT_DIR%"
         rm OpenSSL.exe
 
@@ -74,7 +75,6 @@ jobs:
         curl -Lo "%MYSQL_VERSION%.zip" "https://dev.mysql.com/get/Downloads/MySQL-5.7/%MYSQL_VERSION%.zip"
         7z x "%MYSQL_VERSION%.zip" -y
         rm "%MYSQL_VERSION%.zip"
-        echo ::set-env name=MYSQL_INSTALL_DIR::%GITHUB_WORKSPACE%\vendor\%MYSQL_VERSION%
 
     - name: Download APNG plugin
       if: steps.vendor-cache.outputs.cache-hit != 'true'
@@ -84,7 +84,6 @@ jobs:
         curl -Lo APNG.7z https://install.skycoder42.de/qtmodules/windows_x86/qt5125/qt.qt5.5125.skycoder42.apng.win32_msvc2017/1.1.2-55.12.5.7z
         7z x APNG.7z -y -oAPNG
         rm APNG.7z
-        echo ::set-env name=APNG_PLUGIN_DLL::%GITHUB_WORKSPACE%\vendor\APNG\5.12.5\msvc2017\plugins\imageformats\qapng.dll
 
     - name: Create build dir
       shell: cmd
