--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
       id: vendor-cache
       with:
         path: vendor
-        key: ${{ runner.os }}-vendor
+        key: ${{ runner.os }}-vendor-${{ hashFiles('.github/workflows/build.yml') }}
 
     - name: Create vendor dirs
       shell: cmd
